--- a/css/flex_layout/flex_layout.css
+++ b/css/flex_layout/flex_layout.css
@@ -1,10 +1,10 @@
 /*
-                  _        _                     
-   ___ ___  _ __ | |_ __ _(_)_ __   ___ _ __ ___ 
+                  _        _
+   ___ ___  _ __ | |_ __ _(_)_ __   ___ _ __ ___
   / __/ _ \| '_ \| __/ _` | | '_ \ / _ \ '__/ __|
  | (_| (_) | | | | || (_| | | | | |  __/ |  \__ \
   \___\___/|_| |_|\__\__,_|_|_| |_|\___|_|  |___/
-                                                 
+
 */
 
 .EXTENDER {
@@ -15,8 +15,8 @@
     right: 0px;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: auto;
+
 }
 .EXTENDER.scroll-x {
     overflow: auto;
@@ -25,6 +25,16 @@
 .EXTENDER.scroll-x > div {
     display: inline-block;
 }
+
+.PADDER0{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+}
+
+
 .PADDER,
 .PADDER10 {
     position: absolute;
@@ -95,11 +105,19 @@
     box-pack: center;
     box-align: center;
 }
-/*                 
+
+
+
+
+
+
+
+
+/*
   _ __ _____      __
  | '__/ _ \ \ /\ / /
- | | | (_) \ V  V / 
- |_|  \___/ \_/\_/  
+ | | | (_) \ V  V /
+ |_|  \___/ \_/\_/
 
 */
 
@@ -119,11 +137,6 @@
     /* W3C */
     display: box;
 }
-
-.ROWS.AUTO {
-    height: auto;
-}
-
 .ROW-FLEX {
     position: relative;
     overflow: hidden;
@@ -139,18 +152,31 @@
     position: relative;
     width: 100%;
 }
+
+.ROWS.AUTO {
+    height: auto;
+}
+
+
+
+
+
+
+
+
 /*
-            _ 
+            _
    ___ ___ | |
   / __/ _ \| |
  | (_| (_) | |
   \___\___/|_|
-                                 
+
 */
 
 .COLS {
     width: 100%;
     height: 100%;
+    overflow:hidden;
     /* Old Syntax */
     display: -webkit-box;
     display: -moz-box;
@@ -174,6 +200,43 @@
     flex: 1;
     -ms-flex: 1;
 }
+
+.COL-FLEX3 {
+    position: relative;
+    height: auto;
+    /* Old Syntax */
+    -webkit-box-flex: 3;
+    -moz-box-flex: 3;
+    /* New Syntax */
+    -webkit-flex: 3;
+    flex: 3;
+    -ms-flex: 3;
+}
+
+.COL-FLEX4 {
+    position: relative;
+    height: auto;
+    /* Old Syntax */
+    -webkit-box-flex: 4;
+    -moz-box-flex: 4;
+    /* New Syntax */
+    -webkit-flex: 4;
+    flex: 4;
+    -ms-flex: 4;
+}
+
+.COL-FLEX5 {
+    position: relative;
+    height: auto;
+    /* Old Syntax */
+    -webkit-box-flex: 5;
+    -moz-box-flex: 5;
+    /* New Syntax */
+    -webkit-flex: 5;
+    flex: 5;
+    -ms-flex: 5;
+}
+
 .COL {
     position: relative;
 }
@@ -184,13 +247,22 @@
         height: 100%;
     }
 }
+
+
+
+
+
+
+
+
+
 /*
-        _ _             
-   __ _| (_) __ _ _ __  
-  / _` | | |/ _` | '_ \ 
+        _ _
+   __ _| (_) __ _ _ __
+  / _` | | |/ _` | '_ \
  | (_| | | | (_| | | | |
   \__,_|_|_|\__, |_| |_|
-            |___/       
+            |___/
 */
 
 .CENTER {
